contact us page ready to view for all devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,15 +124,49 @@
 }
 /* newlatter-form-box */
 
+
+/* contact-section-box */
+.contact-section-box{
+  @apply bg-[#000] text-[#fff] px-[40px] py-[60px] border-b-[10px] border-[#ff4500];
+}
+.contact-form-section-spority{
+  @apply flex items-center justify-center gap-12 flex-wrap py-[60px] w-full;
+}
+.contact-form-section-spority input{
+  @apply px-[20px] py-[10px] rounded-full text-[#212121] outline-none w-[35%];
+}
+.contact-form-section-spority textarea{
+  @apply py-[10px] px-[20px] rounded-lg w-[72.5%] outline-none;
+}
+.contact-btn-form-spority{
+  @apply w-[72.5%] bg-[#ff4500] text-[#000] text-[20px] font-bold rounded-full px-[40px] py-[10px];
+}
+/* contact-section-box */
+
+
 /* hero-banners */
 .HomeHeroBanner {
   @apply border-b-[10px] border-[#ff4500] flex flex-wrap items-center gap-6 justify-between px-[40px] py-[60px] bg-[#000] text-[#fff];
 }
 /* hero-banners */
 
-@media (max-width: 800px) and (min-width: 300px) {
+@media (max-width: 800px) and (min-width: 451px) {
   .destop-tabsview-tabs-authBtn {
     @apply hidden;
+  }
+  .mobileview-tabs2view-dropdown {
+    @apply block text-4xl;
+  }
+}
+@media (max-width: 451px) and (min-width: 260px) {
+  .destop-tabsview-tabs-authBtn {
+    @apply hidden;
+  }
+  .contact-section-box{
+    @apply px-[10px];
+  }
+  .contact-form-section-spority input{
+    @apply px-[10px] py-[10px] rounded-full text-[#212121] outline-none w-[72.5%];
   }
   .mobileview-tabs2view-dropdown {
     @apply block text-4xl;
