--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1,6 +1,7 @@
 .admin-child-body-box::-webkit-scrollbar,
 .post-list::-webkit-scrollbar,
 .events-list::-webkit-scrollbar,
+.postform-box-admin::-webkit-scrollbar,
 .channels-list::-webkit-scrollbar {
   @apply w-0;
 }
@@ -21,7 +22,7 @@
     rgba(255, 255, 0, 0.24) 267.78%
   );
 }
-.btn-color-bg {
+.btn-color-bg, .bg-colored-post-btn {
   background: linear-gradient(
     102.94deg,
     #ff4500 -14.44%,
