few more updates

--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1,3 +1,4 @@
+body::-webkit-scrollbar,
 .admin-child-body-box::-webkit-scrollbar,
 .post-list::-webkit-scrollbar,
 .events-list::-webkit-scrollbar,
