--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,4 +1,4 @@
 .link-button-custom, .button-custom {
-  background: linear-gradient(-60deg, #e8d576, #e3652b);
-  @apply px-6 py-1 rounded-full font-medium text-black text-[16px];
+  background: linear-gradient(99.3deg, #E36C30 4.09%, #E8D576 118.98%);
+  @apply px-6 py-1 rounded-full font-medium text-black text-[14px];
 }
