few more changings in live channel page made responsive for mobile

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,8 +1,18 @@
-.link-button-custom, .button-custom, .home-btn {
-  background: linear-gradient(99.3deg, #E36C30 4.09%, #E8D576 118.98%);
+.link-button-custom,
+.button-custom,
+.home-btn, .watch-now-btn {
+  background: linear-gradient(99.3deg, #e36c30 4.09%, #e8d576 118.98%);
   @apply px-6 py-1 rounded-full font-medium text-black text-[14px];
 }
 
-.home-btn{
-    @apply py-3 px-7;
+.home-btn {
+  @apply py-3 px-7;
+}
+
+
+.text-gradient {
+  @apply text-3xl font-bold text-center pb-5 cursor-context-menu select-none;
+  background: linear-gradient(99.3deg, #e36c30 4.09%, #e8d576 118.98%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
