--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,14 +1,18 @@
 .link-button-custom,
 .button-custom,
-.home-btn, .watch-now-btn {
+.home-btn,
+.watch-now-btn {
   background: linear-gradient(99.3deg, #e36c30 4.09%, #e8d576 118.98%);
   @apply px-6 py-1 rounded-full font-medium text-black text-[14px] w-fit;
+}
+.back-to-top-btn {
+  @apply p-2 fixed z-[999] bottom-5 right-5 rounded-full font-medium text-black text-[14px] w-[40px] h-[40px] flex items-center justify-center;
+  background: linear-gradient(99.3deg, #e36c30 4.09%, #e8d576 118.98%);
 }
 
 .home-btn {
   @apply py-3 px-7;
 }
-
 
 .text-gradient {
   @apply text-3xl font-bold text-center pb-5 cursor-context-menu select-none;
